poprawienie syntax i dodanie podstawowych funkcji

--- a/projektMNiS/projektMNiS.vcxproj
+++ b/projektMNiS/projektMNiS.vcxproj
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="source\MatrixCalculator.cpp" />
+    <ClCompile Include="source\%28primitive%29MatrixCalculator.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
